# pyre-ast

./: pyre-ast.opam
lib/taglessFinal/: build-libpython-win.ps1  dune  msys-build-libpython.ps1  pre-build.py
lib/taglessFinal/cpython-mingw/: pyconfig.h.in
lib/taglessFinal/cpython-mingw/Misc/: python-config.sh.in
lib/taglessFinal/cpython-mingw/Modules/: _xxsubinterpretersmodule.c  getpath.py
lib/taglessFinal/cpython-mingw/Modules/_io/: fileio.c
lib/taglessFinal/cpython-mingw/PC/: python3dll.c  python_exe.rc
lib/taglessFinal/cpython-mingw/Python/: dynamic_annotations.c  getcompiler.c  initconfig.c  pathconfig.c  thread_nt.h  traceback.c
lib/taglessFinal/vendor-mingw/: Makefile  Makefile.pre  Makefile.pre.in  config.status  configure  configure.ac  configure~  mingw_ignorefile.txt  mingw_smoketests.py  pyconfig.h  pyconfig.h.in  pyconfig.h.in~  setup.py
lib/taglessFinal/vendor-mingw/Misc/: python-config.sh
lib/taglessFinal/vendor-mingw/Modules/: Setup.bootstrap.in  _gdbmmodule.c  _localemodule.c  _winapi.c  config.c  getpath.c  ld_so_aix  main.c  posixmodule.c  selectmodule.c  socketmodule.c  socketmodule.h  timemodule.c
lib/taglessFinal/vendor-mingw/Modules/_ctypes/: _ctypes.c
lib/taglessFinal/vendor-mingw/Modules/_multiprocessing/: multiprocessing.c  (+1 more)
lib/taglessFinal/vendor-mingw/Objects/: fileobject.c
lib/taglessFinal/vendor-mingw/PC/: _testconsole.c  launcher.c  msvcrtmodule.c  pylauncher.rc  pythonw_exe.rc  winreg.c
lib/taglessFinal/vendor-mingw/Python/: bltinmodule.c  dynload_win.c  fileutils.c  frozenmain.c  pylifecycle.c  sysmodule.c
